[gd_scene load_steps=2 format=2]

[ext_resource path="res://Asset/UI/Console/Console.gd" type="Script" id=1]

[node name="Console" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Section" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.399579, 0.399579 )

[node name="System" type="VBoxContainer" parent="Section"]
margin_right = 229.0
margin_bottom = 124.0

[node name="Blank" type="Label" parent="Section/System"]
margin_right = 229.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 0

[node name="Title" type="Label" parent="Section/System"]
margin_top = 33.0
margin_right = 229.0
margin_bottom = 58.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 0
text = "System"

[node name="Screen" type="HBoxContainer" parent="Section/System"]
margin_top = 66.0
margin_right = 229.0
margin_bottom = 91.0

[node name="Name" type="Label" parent="Section/System/Screen"]
margin_right = 74.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 0
text = "Screen"

[node name="Colon" type="Label" parent="Section/System/Screen"]
margin_left = 82.0
margin_right = 88.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = ":"

[node name="Value" type="Label" parent="Section/System/Screen"]
margin_left = 96.0
margin_right = 109.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="ProcessorCount" type="HBoxContainer" parent="Section/System"]
margin_top = 99.0
margin_right = 229.0
margin_bottom = 124.0

[node name="Name" type="Label" parent="Section/System/ProcessorCount"]
margin_right = 119.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 0
text = "Processors"

[node name="Colon" type="Label" parent="Section/System/ProcessorCount"]
margin_left = 127.0
margin_right = 133.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = ":"

[node name="Value" type="Label" parent="Section/System/ProcessorCount"]
margin_left = 141.0
margin_right = 154.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="Game" type="VBoxContainer" parent="Section"]
margin_top = 132.0
margin_right = 229.0
margin_bottom = 454.0

[node name="Blank" type="Label" parent="Section/Game"]
margin_right = 229.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 0

[node name="Title" type="Label" parent="Section/Game"]
margin_top = 33.0
margin_right = 229.0
margin_bottom = 58.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 0
text = "Game"

[node name="FPS" type="HBoxContainer" parent="Section/Game"]
margin_top = 66.0
margin_right = 229.0
margin_bottom = 91.0

[node name="Name" type="Label" parent="Section/Game/FPS"]
margin_right = 39.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 0
text = "FPS"

[node name="Colon" type="Label" parent="Section/Game/FPS"]
margin_left = 47.0
margin_right = 53.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = ":"

[node name="Value" type="Label" parent="Section/Game/FPS"]
margin_left = 61.0
margin_right = 74.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="Resolution" type="HBoxContainer" parent="Section/Game"]
margin_top = 99.0
margin_right = 229.0
margin_bottom = 124.0

[node name="Name" type="Label" parent="Section/Game/Resolution"]
margin_right = 87.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Window"

[node name="Colon" type="Label" parent="Section/Game/Resolution"]
margin_left = 95.0
margin_right = 101.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = ":"

[node name="Value" type="Label" parent="Section/Game/Resolution"]
margin_left = 109.0
margin_right = 122.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="Health" type="HBoxContainer" parent="Section/Game"]
margin_top = 132.0
margin_right = 229.0
margin_bottom = 157.0

[node name="Name" type="Label" parent="Section/Game/Health"]
margin_right = 71.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 0
text = "Health"

[node name="Colon" type="Label" parent="Section/Game/Health"]
margin_left = 79.0
margin_right = 85.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = ":"

[node name="Value" type="Label" parent="Section/Game/Health"]
margin_left = 93.0
margin_right = 106.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="Altitude" type="HBoxContainer" parent="Section/Game"]
margin_top = 165.0
margin_right = 229.0
margin_bottom = 190.0

[node name="Name" type="Label" parent="Section/Game/Altitude"]
margin_right = 84.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 0
text = "Altitude"

[node name="Colon" type="Label" parent="Section/Game/Altitude"]
margin_left = 92.0
margin_right = 98.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = ":"

[node name="Level" type="Label" parent="Section/Game/Altitude"]
margin_left = 106.0
margin_right = 119.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="Value" type="Label" parent="Section/Game/Altitude"]
margin_left = 127.0
margin_right = 140.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="Volume" type="HBoxContainer" parent="Section/Game"]
margin_top = 198.0
margin_right = 229.0
margin_bottom = 223.0

[node name="Name" type="Label" parent="Section/Game/Volume"]
margin_right = 83.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 0
text = "Volume"

[node name="Colon" type="Label" parent="Section/Game/Volume"]
margin_left = 91.0
margin_right = 97.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = ":"

[node name="Value" type="Label" parent="Section/Game/Volume"]
margin_left = 105.0
margin_right = 118.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="TotalDistance" type="HBoxContainer" parent="Section/Game"]
margin_top = 231.0
margin_right = 229.0
margin_bottom = 256.0

[node name="Name" type="Label" parent="Section/Game/TotalDistance"]
margin_right = 161.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 0
text = "Distance (total)"

[node name="Colon" type="Label" parent="Section/Game/TotalDistance"]
margin_left = 169.0
margin_right = 175.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = ":"

[node name="Value" type="Label" parent="Section/Game/TotalDistance"]
margin_left = 183.0
margin_right = 196.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="AltitudeDistance" type="HBoxContainer" parent="Section/Game"]
margin_top = 264.0
margin_right = 229.0
margin_bottom = 289.0

[node name="Name" type="Label" parent="Section/Game/AltitudeDistance"]
margin_right = 194.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 0
text = "Distance (altitude)"

[node name="Colon" type="Label" parent="Section/Game/AltitudeDistance"]
margin_left = 202.0
margin_right = 208.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = ":"

[node name="Value" type="Label" parent="Section/Game/AltitudeDistance"]
margin_left = 216.0
margin_right = 229.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="Difficulty" type="HBoxContainer" parent="Section/Game"]
margin_top = 297.0
margin_right = 229.0
margin_bottom = 322.0

[node name="Name" type="Label" parent="Section/Game/Difficulty"]
margin_right = 95.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 0
text = "Difficulty"

[node name="Colon" type="Label" parent="Section/Game/Difficulty"]
margin_left = 103.0
margin_right = 109.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = ":"

[node name="Value" type="Label" parent="Section/Game/Difficulty"]
margin_left = 117.0
margin_right = 130.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="Volume" type="VBoxContainer" parent="Section"]
margin_top = 462.0
margin_right = 229.0
margin_bottom = 565.0

[node name="Blank" type="Label" parent="Section/Volume"]
margin_right = 229.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 0

[node name="Title" type="Label" parent="Section/Volume"]
margin_top = 33.0
margin_right = 229.0
margin_bottom = 58.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 0
text = "Volume"

[node name="HBoxContainer" type="HBoxContainer" parent="Section/Volume"]
margin_top = 66.0
margin_right = 229.0
margin_bottom = 103.0

[node name="Increase" type="Button" parent="Section/Volume/HBoxContainer"]
margin_right = 71.0
margin_bottom = 37.0
text = "Vol+"

[node name="Decrease" type="Button" parent="Section/Volume/HBoxContainer"]
margin_left = 79.0
margin_right = 145.0
margin_bottom = 37.0
text = "Vol-"

[node name="Altitude" type="VBoxContainer" parent="Section"]
margin_top = 573.0
margin_right = 229.0
margin_bottom = 856.0

[node name="Blank" type="Label" parent="Section/Altitude"]
margin_right = 229.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 0

[node name="Title" type="Label" parent="Section/Altitude"]
margin_top = 33.0
margin_right = 229.0
margin_bottom = 58.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 0
text = "Altitude"

[node name="Space" type="Button" parent="Section/Altitude"]
margin_top = 66.0
margin_right = 229.0
margin_bottom = 103.0
text = "Space"

[node name="Sky" type="Button" parent="Section/Altitude"]
margin_top = 111.0
margin_right = 229.0
margin_bottom = 148.0
text = "Sky"

[node name="Street" type="Button" parent="Section/Altitude"]
margin_top = 156.0
margin_right = 229.0
margin_bottom = 193.0
text = "Street"

[node name="Cave" type="Button" parent="Section/Altitude"]
margin_top = 201.0
margin_right = 229.0
margin_bottom = 238.0
text = "Cave"

[node name="Asia" type="Button" parent="Section/Altitude"]
margin_top = 246.0
margin_right = 229.0
margin_bottom = 283.0
text = "Asia"

[node name="Player" type="VBoxContainer" parent="Section"]
margin_top = 864.0
margin_right = 229.0
margin_bottom = 967.0

[node name="Blank" type="Label" parent="Section/Player"]
margin_right = 229.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 0

[node name="Title" type="Label" parent="Section/Player"]
margin_top = 33.0
margin_right = 229.0
margin_bottom = 58.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 0
text = "Player"

[node name="LockHealth" type="Button" parent="Section/Player"]
margin_top = 66.0
margin_right = 229.0
margin_bottom = 103.0
text = "Invincible"

[node name="Enemy" type="VBoxContainer" parent="Section"]
margin_top = 975.0
margin_right = 229.0
margin_bottom = 1168.0

[node name="Blank" type="Label" parent="Section/Enemy"]
margin_right = 229.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 0

[node name="Title" type="Label" parent="Section/Enemy"]
margin_top = 33.0
margin_right = 229.0
margin_bottom = 58.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 0
text = "Enemy"

[node name="ButterCat" type="Button" parent="Section/Enemy"]
margin_top = 66.0
margin_right = 229.0
margin_bottom = 103.0
text = "Buttercat"

[node name="PopCatTop" type="Button" parent="Section/Enemy"]
margin_top = 111.0
margin_right = 229.0
margin_bottom = 148.0
text = "Popcat (Top)"

[node name="PopCatBottom" type="Button" parent="Section/Enemy"]
margin_top = 156.0
margin_right = 229.0
margin_bottom = 193.0
text = "Popcat (Bottom)"

[connection signal="button_up" from="Section/Volume/HBoxContainer/Increase" to="." method="_on_Increase_Volume_button_up"]
[connection signal="button_up" from="Section/Volume/HBoxContainer/Decrease" to="." method="_on_Decrease_Volume_button_up"]
[connection signal="button_up" from="Section/Altitude/Space" to="." method="_on_Space_button_up"]
[connection signal="button_up" from="Section/Altitude/Sky" to="." method="_on_Sky_button_up"]
[connection signal="button_up" from="Section/Altitude/Street" to="." method="_on_Street_button_up"]
[connection signal="button_up" from="Section/Altitude/Cave" to="." method="_on_Cave_button_up"]
[connection signal="button_up" from="Section/Altitude/Asia" to="." method="_on_Asia_button_up"]
[connection signal="pressed" from="Section/Player/LockHealth" to="." method="_on_LockHealth_pressed"]
[connection signal="button_up" from="Section/Enemy/ButterCat" to="." method="_on_ButterCatLinear_button_up"]
[connection signal="button_up" from="Section/Enemy/PopCatTop" to="." method="_on_PopCatTop_button_up"]
[connection signal="button_up" from="Section/Enemy/PopCatBottom" to="." method="_on_PopCatBottom_button_up"]
